shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  annotations:
    cnrm.cloud.google.com/project-id: ${PROJECT_ID}
