shared/batch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${JOB_DEPLOYMENT}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      deployment: ${JOB_DEPLOYMENT}
  template:
    metadata:
      labels:
        deployment: ${JOB_DEPLOYMENT}
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      nodeSelector:
        cloud.google.com/gke-nodepool: system
      containers:
      - name: batch-dispatcher
        image: ${BATCH_DISPATCHER_IMAGE}
        volumeMounts:
        - name: ${JOB_CONFIG_VOLUME}
          mountPath: ${JOB_CONFIG_MOUNT_PATH}
      volumes:
      - name: ${JOB_CONFIG_VOLUME}
        configMap:
          name: ${JOB_CONFIG_MAP}
