shared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT}
  annotations:
    cloud.google.com/neg: |
      {
        "ingress": true
      }
    beta.cloud.google.com/backend-config: |
      {
        "ports": {
          "80": "${DEPLOYMENT}-backend"
        }
      }
spec:
  type: NodePort
  selector:
    deployment: ${DEPLOYMENT}
  ports:
  - port: 80
    targetPort: ${TARGET_PORT}
