shared/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${INGRESS}
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: ${IP_NAME}
    networking.gke.io/managed-certificates: defectdojo
spec:
  rules:
  - host: defectdojo.${DNS_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: defectdojo/defectdojo
          servicePort: 80
